# Cpp

./: .gitignore  .gitmodules  README.md  ReadMe.md
29.11.2020_SortAlgorithm_Coll/31.10.2020_bubbleSort/: CMakeLists.txt
29.11.2020_SortAlgorithm_Coll/31.10.2020_bubbleSort/include/: bubbleSort.hpp
29.11.2020_SortAlgorithm_Coll/31.10.2020_bubbleSort/scripts/: build.sh  run.sh
29.11.2020_SortAlgorithm_Coll/31.10.2020_bubbleSort/src/: bubbleSort.cpp  main.cpp
29.11.2020_SortAlgorithm_Coll/31.10.2020_bubbleSort/tests/test1/: maintest.cpp
Challanges/Soundex/: CMakeLists.txt  README.md
Challanges/Soundex/src/app/: main.cpp
Challanges/Soundex/src/soundex/: CMakeLists.txt  Soundex.cpp  Soundex.hpp
Challanges/Soundex/tests/: main.cpp
Challenges/Soundex/src/soundex/: CMakeLists.txt  Soundex.cpp
Challenges/Soundex/tests/: CMakeLists.txt  Soundex_Test.hpp
Games/SnakeTheGame/: CMakeLists.txt  pbuild.sh
Games/SnakeTheGame/src/: main.cpp
Practise/DataStructures/BinarySearchTree/: CMakeLists.txt  build.sh
Practise/DataStructures/BinaryTree/: CMakeLists.txt
Practise/DataStructures/BinaryTree/src/: BinaryTree.hpp
Practise/DataStructures/DeQueue/: CMakeLists.txt
Practise/DataStructures/DeQueue/src/: DeQueue.txx
Practise/DataStructures/LinkedList/: CMakeLists.txt
Practise/DataStructures/LinkedList/src/: LinkedList.hpp  LinkedList.txx  main.cpp
Practise/DataStructures/LinkedList/tests/: CMakeLists.txt  linked_list_tests.cpp  main.cpp
Practise/DataStructures/Self_Vector/: CMakeLists.txt
Practise/DataStructures/Self_Vector/src/: SelfVector.hpp  SelfVector.txx  main.cpp
Practise/DataStructures/Stack/: CMakeLists.txt
Practise/DataStructures/Stack/src/: Stack.hpp  Stack.txx
Practise/Other/DecoratorPatternCoffeeExercise/: Beverage.cpp  Beverage.hpp  CMakeLists.txt  Decaff.hpp  Espresso.hpp  HouseBlend.cpp  Latte.hpp  main.cpp
Practise/StlImplementations/StdExpectedImpl/: CMakeLists.txt  bad_expected_access.hpp  details.hpp  expected.hpp  main.cpp  unexpected.hpp
Qt/AttachedListener/: Attachee.cpp  Attachee.hpp  Attacher.cpp  Attacher.hpp  AttatchedListener.cpp  AttatchedListener.hpp  CMakeLists.txt  README.md  main.cpp  main.qml
Qt/DynamicPieDiagram/: CMakeLists.txt  PieChart.cpp  PieChart.hpp  README.md  main.qml
Qt/InvisibleItemPractise/: CMakeLists.txt  GlowInitiater.cpp  GlowInitiater.hpp  README.md  main.qml
Qt/Networking/Local_UDP_Chat/: CMakeLists.txt  chat.cpp  chat.hpp  display.cpp
Qt/Qml/ToDo-App/: CMakeLists.txt
Qt/Qml/ToDo-App/build-Debug/: CMakeCache.txt  CMakeCache.txt.prev  Makefile  appDashboard  cmake_install.cmake
Qt/Qml/ToDo-App/build-Debug/.qtc_clangd/: compile_commands.json
Qt/Qml/ToDo-App/build-Debug/.rcc/: appDashboard_raw_qml_0.qrc  qrc_appDashboard_raw_qml_0.cpp  qrc_qmake_Dashboard.cpp
Qt/Qml/ToDo-App/build-Debug/.rcc/qmlcache/: appDashboard_qmlcache_loader.cpp
Qt/Qml/ToDo-App/build-Debug/appDashboard_autogen/3YJK5W5UP7/: qrc_resources.cpp
Qt/Qml/ToDo-App/build-Debug/tests/: Makefile  all_tests  cmake_install.cmake
Qt/Qml/ToDo-App/resources/: resources.qrc
Qt/Qml/ToDo-App/src/app/: main.cpp
Qt/Qml/ToDo-App/src/app/view/: MSidebar.qml  main.qml
Qt/Qml/ToDo-App/tests/: CMakeLists.txt
Qt/ToDoList/: CMakeLists.txt  README.md  main.cpp  main.qml  qtquickcontrols2.conf  todo_list.cpp  todo_list.hpp  todo_list_model.cpp  todo_list_model.hpp
Qt/simple_register/: CMakeLists.txt
Qt/simple_register/src/app/: main.cpp
Qt/simple_register/src/app/view/components/: MButton.qml
Qt/testing/: CMakeLists.txt  main.cpp  main.qml
Qt/testing/build-Debug/: CMakeCache.txt  Makefile  apptesting  apptesting_qmltyperegistrations.cpp  cmake_install.cmake
Qt/testing/build-Debug/.cmake/api/v1/reply/: cache-v2-454d5017beae8f639593.json  cmakeFiles-v1-9d23368e7a044b0fd8a7.json  codemodel-v2-43214851e2d9dc42af04.json  index-2022-01-11T21-19-24-0793.json  target-all_qmllint-Debug-31b7f967694c364c6857.json  target-all_qmltyperegistrations-Debug-34e9d3d70211de445fa9.json  target-apptesting-Debug-bfe1b42cbc3bc78ab20b.json  target-apptesting_autogen-Debug-f68eb227ba69a0277227.json  target-apptesting_automoc_json_extraction-Debug-468df583e871d0f3ecab.json  target-apptesting_other_files-Debug-2e70ad6248fd36eed16b.json  target-apptesting_qmllint-Debug-11159a6393dcea00084f.json  target-apptesting_qmltyperegistration-Debug-38657fbfa838704e2e94.json  target-apptesting_tooling-Debug-53559d0be5f8f3e81f53.json
Qt/testing/build-Debug/.qtc_clangd/: compile_commands.json
Qt/testing/build-Debug/.qtc_clangd/.cache/clangd/index/: QMetaType.E7591853CF1C17C2.idx  QQmlApplicationEngine.46347CF071D7C54B.idx  __stddef_max_align_t.h.152077743A4165DD.idx  algorithmfwd.h.20ED5CA0AC688A3C.idx  alloc_traits.h.B37F0213D6391980.idx  alloca.h.B3C3404035C15EA6.idx  allocated_ptr.h.9E55EAC1E221125A.idx  allocator.h.394340D4AFD0BB3B.idx  array.D8DE39B4581540F3.idx  atomic.C96209A0696380EA.idx  atomic_base.h.F118387B313E4F7F.idx  atomic_word.h.ECC70FE99C9E5DD3.idx  auto_ptr.h.6C881C0DF274EBDF.idx  basic_string.h.4C4ECAF92DDBC2FB.idx  basic_string.tcc.79FB62151E4CF456.idx  bessel_function.tcc.363522A49CE606F6.idx  beta_function.tcc.B17631E90F5F428F.idx  bit.80FBF70B2C290900.idx  byteswap.h.6F2302C3C3B7048C.idx  c++allocator.h.BBBFBE95F775D5B7.idx  c++locale.h.B49702F41B126822.idx  cctype.4F156C127E35B60F.idx  cerrno.7575ACCDA80AA795.idx  char_traits.h.94769F13C7BDFB0D.idx  charconv.h.8E6A8A91F6A3D636.idx  chrono.E17ABF0F77A5FD39.idx  cmath.AF48DC9BE999311F.idx  concept_check.h.758C509CD2850D66.idx  cpp_type_traits.h.C3A811FFDE72BE58.idx  cstddef.337D34E624285F88.idx  cstdio.4027945FEE8890E9.idx  ctime.B529F9448D24C25D.idx  ctype.h.8C666B63C116FFB8.idx  (+160 more)
Qt/testing/build-Debug/.rcc/: apptesting_raw_qml_0.qrc  qmake_testing.qrc  qrc_apptesting_raw_qml_0.cpp  qrc_qmake_testing.cpp
Qt/testing/build-Debug/.rcc/qmlcache/: apptesting_main_qml.cpp  apptesting_qml_loader_file_list.rsp  apptesting_qmlcache_loader.cpp
Qt/testing/build-Debug/qmltypes/: apptesting_foreign_types.txt  apptesting_qmltyperegistrations.cpp.d
Qt/testing/build-Debug/testing/: qmldir
(+824 files in other folders)
